# fastapi-template

./: .env.example  .env.test  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  api_pre_start.py  docker-compose.yml  docker-entrypoint.sh  dockerignore  pyproject.toml  rabbitmq.conf  tests_pre_start.py
.github/: copilot-instructions.md
.github/workflows/: lint.yaml  test.yaml
alembic/: env.py
alembic/versions/: 2024_03_24_1223-646ed9779614_add_user.py  2025_07_07_1212-7852b69ad42e_add_users_2fa.py  2025_10_06_1328-77b76554607d_add_users.py  2025_10_06_1330-29eea41b0e36_add_users_2fa.py
app/: custom_logging.py  main.py  setup.py
app/api/: routers.py
app/api/dependencies/: get_current_user.py  get_token.py
app/auth/api/: auth.py  endpoints.py  routers.py
app/auth/enums/: claims_enum.py
app/auth/schemas/: auth_schema.py  token_schema.py
app/auth/services/: auth_service.py
app/auth/use_cases/: auth_user_use_case.py  reset_password_use_case.py
app/auth/utils/: security.py  set_http_only_cookie.py  validate_password.py
app/celery/: celery_settings.py  start-celery-beat.sh
app/celery/tasks/: emails.py
app/clients/: example_email_client.py
app/commands/: seed_users.py
app/common/api/: endpoints.py
app/common/clients/: base_request_client.py  example_email_client.py  mailpit_email_client.py
app/common/domain/: __init__.py  criteria.py  pagination_criteria.py  paginator_criteria.py  repository.py  schema.py
app/common/entities/: __init__.py  _exc.py  base_entity.py
app/common/enums/: extended_enum.py
app/common/exceptions/: __init__.py  base_application_error.py  external_provider_error.py  repository_errors.py
app/common/infrastructure/: __init__.py  base_sqlalchemy_model.py  base_sqlalchemy_repository.py  sqlalchemy_criteria_translator.py  sqlalchemy_paginator_translator.py
app/common/models/: base_class.py
app/common/repositories/: base_repository.py
app/core/: config.py  security.py
app/db/: database_session_manager.py  session.py
app/emails/: __init__.py  _global_state.py  _main.py
app/exceptions/: external_provider_error.py  invalid_credentials_exception.py  invalid_password_exception.py  model_not_created_exception.py  model_not_found_exception.py
app/models/: __init__.py  user.py
app/repositories/: base_repository.py  users_repository.py
app/schemas/: auth_schema.py  user_schema.py
app/services/: auth_service.py  emails_service.py  users_service.py
app/templates/: __init__.py
app/use_cases/: auth_user_use_case.py
app/utils/: set_http_only_cookie.py
assets/templates/: base.mjml  new_user_email.j2  new_user_email.mjml
scripts/: format.sh  init-localstack.sh  seed-db.sh
tests/: conftest.py
tests/factories/: __init__.py  client_factory.py  user_factory.py
tests/utils/: create_provider.py  create_user.py
(+134 files in other folders)
