[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = ""
authors = ["Dan Tche <dtcheche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
black = "^24.4.2"
isort = "^5.12.0"
flake8 = "^7.0.0"
pre-commit = "^3.5.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.1.0"
autoflake = "^2.2.1"
mypy = "^1.10.0"
tenacity = "^8.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytz = "^2024.1"
python-multipart = "^0.0.9"
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "app/database/",
    "app/database/session.py",
    "app/core/config.py",
    "alembic"
]