[project]
name = "fastapi-template"
version = "0.1.0"
description = "Light-it template for FastAPI projects"
authors = [
    {name = "Dan Tche", email = "dtcheche@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "alembic>=1.17.2",
    "asgi-correlation-id>=4.3.4",
    "bcrypt>=5.0.0",
    "boto3>=1.42.16",
    "celery>=5.6.0",
    "fastapi[standard]>=0.127.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "structlog-sentry>=2.2.1",
]

[dependency-groups]
dev = [
    "celery-types>=0.24.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "tenacity>=9.1.2",
]

[tool.mypy]
python_version="3.12"
disallow_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
follow_imports = "skip"
exclude = [
    "tests.*",
    "app.factories.*",
    "app.commands.*",
    "app.core.*",
    "app.common.schemas.pagination_schema.py",
    "app.main.py",
    "alembic.env.py",
    "app.custom_logging.py",
    "app.common.models.base_class.py"
]


[tool.ruff]
line-length = 79
exclude = [
    "__init__.py",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

ignore = ["E501", "B008", "B904", "B012", "B024"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
"app/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
omit = [
    "app/db/*",
    "app/commands/*",
    "app/exceptions/*"
]